--- a/repo_config.yaml
+++ b/repo_config.yaml
@@ -2,12 +2,12 @@
 # "CODECOMMIT" - will create a new codecommit repo with name specified in repoName
 # "CODECOMMIT_PROVIDED" - will expect a codecommit repository in the account with name specified in repoName
 # "GITHUB" - will use an existing codestar connection for GitHub source, checkout README.MD, for instructions
-repoType: CODECOMMIT
+repoType: GITHUB
 # the repo where the pipeline should pull its source from
 repoName: mlops-at-edge-for-quality-inspection
 # the CodestarConnectionArn for your GitHub repository
-githubConnectionArn: <FILL_WITH_CONNECTION_ARN>
+githubConnectionArn: arn:aws:codeconnections:us-west-2:097037476364:connection/19c8a401-8bdd-49d2-a131-d19a1831f1f3
 # the GitHub repo owner
-githubRepoOwner: awssamples
+githubRepoOwner: MisoRobotics
 # the git branch to use
 branchName: main
