--- a/training/lib/assets/sagemaker_pipeline/requirements.txt
+++ b/training/lib/assets/sagemaker_pipeline/requirements.txt
@@ -1,5 +1,3 @@
-boto3>=1.34.142,<2.0
-botocore>=1.34.0,<2.0
-s3transfer>=0.10.0,<0.11.0
-urllib3>=1.26.8,<2.0
-sagemaker>=2.100.0,<3.0
+boto3==1.34.142
+botocore==1.33.13
+sagemaker==2.172.0
